--- a/charts/cronjob/templates/external-secret.yaml
+++ b/charts/cronjob/templates/external-secret.yaml
@@ -1,47 +1,1 @@
-{{- if .Values.ExternalSecret.enabled -}}
----
-apiVersion: external-secrets.io/v1
-kind: ExternalSecret
-metadata:
-  name: {{ include "cronjob.fullname" . }}
-  namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "cronjob.labels" . | nindent 4 }}
-spec:
-  refreshInterval: 15s
-  secretStoreRef:
-    name: {{ .Values.ExternalSecret.name }}
-    kind: SecretStore
-  target:
-    name: {{ include "cronjob.fullname" . }}
-    creationPolicy: Owner
-    deletionPolicy: Retain
-  {{- if eq .Values.ExternalSecret.type "hashicorp" }}
-  dataFrom:
-  {{- range .Values.ExternalSecret.kvPath }}
-    - extract:
-        key: {{ . }}
-        metadataPolicy: None
-        decodingStrategy: None
-        conversionStrategy: Default
-  {{- end }}
-  {{- else if eq .Values.ExternalSecret.type "aws" }}
-  dataFrom:
-  {{- range .Values.ExternalSecret.kvPath }}
-    - extract:
-        key: {{ . }}
-  {{- end }}
-  {{- else if eq .Values.ExternalSecret.type "gcp" }}
-  dataFrom:
-  {{- range .Values.ExternalSecret.kvPath }}
-    - extract:
-        key: {{ . }}
-  {{- end }}
-  {{- else if eq .Values.ExternalSecret.type "azure" }}
-  dataFrom:
-  {{- range .Values.ExternalSecret.kvPath }}
-    - extract:
-        key: {{ . }}
-  {{- end }}
-  {{- end }}
-{{- end }}
+{{- include "common.externalsecret" . -}}
