--- a/charts/cronjob/templates/ingress-grpc.yaml
+++ b/charts/cronjob/templates/ingress-grpc.yaml
@@ -1,42 +1,1 @@
-{{- if .Values.ingressGRPC.enabled }}
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: {{ include "cronjob.fullname" . }}-grpc
-  labels:
-    {{- include "cronjob.labels" . | nindent 4 }}
-  annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
-    {{- with .Values.ingressGRPC.annotations }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
-spec:
-  {{- if .Values.ingressGRPC.className }}
-  ingressClassName: {{ .Values.ingressGRPC.className }}
-  {{- end }}
-  {{- if .Values.ingressGRPC.tls }}
-  tls:
-    {{- range .Values.ingressGRPC.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
-  rules:
-    {{- range .Values.ingressGRPC.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            pathType: {{ .pathType }}
-            backend:
-              service:
-                name: {{ include "cronjob.fullname" $ }}
-                port:
-                  number: {{ .port | default 50051 }}
-          {{- end }}
-    {{- end }}
-{{- end }}
+{{- include "common.ingress.grpc" . -}}
