--- a/charts/statefulset/templates/statefulset.yaml
+++ b/charts/statefulset/templates/statefulset.yaml
@@ -5,6 +5,10 @@ metadata:
   name: {{ include "statefulset.fullname" . }}
   labels:
     {{- include "statefulset.labels" . | nindent 4 }}
+  {{- with .Values.commonAnnotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   serviceName: {{ .Values.statefulset.serviceName | default (include "statefulset.fullname" .) }}
   replicas: {{ .Values.replicaCount }}
@@ -15,6 +19,16 @@ spec:
     rollingUpdate:
       partition: {{ .Values.statefulset.updateStrategy.rollingUpdate.partition }}
     {{- end }}
+  {{- with .Values.persistence.persistentVolumeClaimRetentionPolicy }}
+  persistentVolumeClaimRetentionPolicy:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- if .Values.persistence.ordinals }}
+  {{- if ne (int .Values.persistence.ordinals.start) 0 }}
+  ordinals:
+    start: {{ .Values.persistence.ordinals.start }}
+  {{- end }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "statefulset.selectorLabels" . | nindent 6 }}
@@ -26,6 +40,9 @@ spec:
       {{- end }}
       labels:
         {{- include "statefulset.selectorLabels" . | nindent 8 }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -34,8 +51,30 @@ spec:
       serviceAccountName: {{ include "statefulset.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      {{- if .Values.initContainers.enabled }}
+      terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds | default 30 }}
+      {{- if .Values.dnsPolicy }}
+      dnsPolicy: {{ .Values.dnsPolicy }}
+      {{- end }}
+      {{- with .Values.dnsConfig }}
+      dnsConfig:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.hostAliases }}
+      hostAliases:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName }}
+      {{- end }}
+      {{- if .Values.runtimeClassName }}
+      runtimeClassName: {{ .Values.runtimeClassName }}
+      {{- end }}
+      {{- if .Values.shareProcessNamespace }}
+      shareProcessNamespace: {{ .Values.shareProcessNamespace }}
+      {{- end }}
+      {{- if or .Values.initContainers.enabled .Values.extraInitContainers }}
       initContainers:
+        {{- if .Values.initContainers.enabled }}
         {{- range .Values.initContainers.containers }}
         - name: {{ .name }}
           image: {{ .image }}
@@ -53,6 +92,10 @@ spec:
           volumeMounts:
             {{- toYaml .volumeMounts | nindent 12 }}
           {{- end }}
+        {{- end }}
+        {{- end }}
+        {{- with .Values.extraInitContainers }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
       containers:
@@ -75,8 +118,11 @@ spec:
           - secretRef:
               name: {{ include "statefulset.fullname" . }}
           {{- end }}
+          {{- with .Values.extraEnvFrom }}
+          {{- toYaml . | nindent 10 }}
           {{- end }}
-          {{- if or (and .Values.configmap.enabled .Values.configmap.fileData) .Values.persistence.enabled }}
+          {{- end }}
+          {{- if or (and .Values.configmap.enabled .Values.configmap.fileData) .Values.persistence.enabled .Values.extraVolumeMounts }}
           volumeMounts:
           {{- if .Values.configmap.enabled }}
           {{- if .Values.configmap.fileData }}
@@ -95,6 +141,9 @@ spec:
           - name: {{ .name }}
             mountPath: {{ .mountPath | default (printf "/%s" .name) }}
           {{- end }}
+          {{- with .Values.extraVolumeMounts }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           {{- end }}
           ports:
             {{- range .Values.service.ports }}
@@ -102,19 +151,22 @@ spec:
               containerPort: {{ .targetPort }}
               protocol: {{ .protocol }}
             {{- end }}
-          {{- with .Values.postStart }}
+          {{- with .Values.lifecycle }}
           lifecycle:
-            postStart:
-              {{- toYaml . | nindent 14 }}
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- include "statefulset.probe" (dict "probe" .Values.probes.startup "probeType" "startup") | nindent 10 }}
           {{- include "statefulset.probe" (dict "probe" .Values.probes.liveness "probeType" "liveness") | nindent 10 }}
           {{- include "statefulset.probe" (dict "probe" .Values.probes.readiness "probeType" "readiness") | nindent 10 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+        {{- with .Values.extraContainers }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+      {{- if or (and .Values.configmap.enabled .Values.configmap.fileData) .Values.extraVolumes }}
+      volumes:
       {{- if .Values.configmap.enabled }}
       {{- if .Values.configmap.fileData }}
-      volumes:
       {{- range .Values.configmap.fileData }}
       - name: custom-config-volume-{{ .fileName | replace ".yaml" "" | replace ".yml" "" | replace ".json" "" | replace ".conf" "" }}
         configMap:
@@ -123,6 +175,10 @@ spec:
           - key: {{ .fileName }}
             path: {{ .fileName }}
       {{- end }}
+      {{- end }}
+      {{- end }}
+      {{- with .Values.extraVolumes }}
+      {{- toYaml . | nindent 6 }}
       {{- end }}
       {{- end }}
       {{- with .Values.nodeSelector }}
@@ -135,6 +191,10 @@ spec:
       {{- end }}
       {{- with .Values.tolerations }}
       tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.topologySpreadConstraints }}
+      topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
   {{- if .Values.persistence.enabled }}
