--- a/charts/cronjob/Chart.yaml
+++ b/charts/cronjob/Chart.yaml
@@ -2,7 +2,8 @@ apiVersion: v2
 name: cronjob
 description: Production-ready Helm chart for Kubernetes CronJobs with modern best practices, security hardening, and comprehensive configuration
 type: application
-version: 1.2.4
+version: 3.0.0
+kubeVersion: ">=1.22.0-0"
 appVersion: "1.0.0"
 keywords:
   - kubernetes
@@ -50,3 +51,7 @@ annotations:
   artifacthub.io/recommendations: |
     - url: https://artifacthub.io/packages/helm/prometheus-community/kube-prometheus-stack
     - url: https://artifacthub.io/packages/helm/external-secrets-operator/external-secrets
+dependencies:
+  - name: common
+    version: "2.x.x"
+    repository: "file://../common"
