--- a/charts/cronjob/templates/networkpolicy.yaml
+++ b/charts/cronjob/templates/networkpolicy.yaml
@@ -1,22 +1,1 @@
-{{- if .Values.networkPolicy.enabled }}
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: {{ include "cronjob.fullname" . }}
-  labels:
-    {{- include "cronjob.labels" . | nindent 4 }}
-spec:
-  podSelector:
-    matchLabels:
-      {{- include "cronjob.selectorLabels" . | nindent 6 }}
-  policyTypes:
-    {{- toYaml .Values.networkPolicy.policyTypes | nindent 4 }}
-  {{- with .Values.networkPolicy.ingress }}
-  ingress:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-  {{- with .Values.networkPolicy.egress }}
-  egress:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-{{- end }}
+{{- include "common.networkpolicy" . -}}
