--- a/charts/cronjob/templates/serviceaccount.yaml
+++ b/charts/cronjob/templates/serviceaccount.yaml
@@ -1,12 +1,1 @@
-{{- if .Values.serviceAccount.create -}}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: {{ include "cronjob.serviceAccountName" . }}
-  labels:
-    {{- include "cronjob.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-{{- end }}
+{{- include "common.serviceaccount" . -}}
