--- a/charts/cronjob/templates/tests/test-connection.yaml
+++ b/charts/cronjob/templates/tests/test-connection.yaml
@@ -1,22 +1,1 @@
-apiVersion: v1
-kind: Pod
-metadata:
-  name: "{{ include "cronjob.fullname" . }}-test-cronjob"
-  labels:
-    {{- include "cronjob.labels" . | nindent 4 }}
-  annotations:
-    "helm.sh/hook": test
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
-spec:
-  containers:
-    - name: test
-      image: bitnami/kubectl:latest
-      command: ['kubectl']
-      args:
-        - 'get'
-        - 'cronjob'
-        - '{{ include "cronjob.fullname" . }}'
-        - '-o'
-        - 'jsonpath={.spec.schedule}'
-  restartPolicy: Never
-  serviceAccountName: {{ include "cronjob.serviceAccountName" . }}
+{{- include "common.test-connection" . -}}
