--- a/charts/daemonset/templates/tests/test-connection.yaml
+++ b/charts/daemonset/templates/tests/test-connection.yaml
@@ -1,16 +1,1 @@
-apiVersion: v1
-kind: Pod
-metadata:
-  name: "{{ include "daemonset.fullname" . }}-test-connection"
-  labels:
-    {{- include "daemonset.labels" . | nindent 4 }}
-  annotations:
-    "helm.sh/hook": test
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
-spec:
-  containers:
-    - name: wget
-      image: busybox:1.35
-      command: ['wget']
-      args: ['{{ include "daemonset.fullname" . }}:{{ (index .Values.service.ports 0).port }}']
-  restartPolicy: Never
+{{- include "common.test-connection" . -}}
