--- a/charts/daemonset/values.yaml
+++ b/charts/daemonset/values.yaml
@@ -30,12 +30,10 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
-  # runAsNonRoot: true
-  # runAsUser: 1000
-  # fsGroup: 1000
-  # seccompProfile:
-  #   type: RuntimeDefault
+podSecurityContext:
+  runAsNonRoot: true
+  seccompProfile:
+    type: RuntimeDefault
 
 env: []
   # - name: ENV_VAR_NAME
@@ -46,14 +44,13 @@ env: []
   #       name: my-secret
   #       key: secret-key
 
-securityContext: {}
-  # allowPrivilegeEscalation: false
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-  # capabilities:
-  #   drop:
-  #     - ALL
+securityContext:
+  allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: true
+  runAsNonRoot: true
+  capabilities:
+    drop:
+      - ALL
 
 service:
   type: ClusterIP
@@ -80,13 +77,9 @@ initContainers:
     #   command: ["sh"]
     #   args: ['-c', 'echo "INIT2"']
 
-postStart: []
-  # exec:
-  #   command: ["sh", "-c", "echo Hello from postStart"]
-
 ingress:
   enabled: false
-  className: nginx
+  className: haproxy
 
   # Security Headers - Modern best practices
   securityHeaders:
@@ -112,19 +105,18 @@ ingress:
   ssl:
     redirect: true
     protocols: "TLSv1.2 TLSv1.3"
-    ciphers: ""  # Leave empty to use nginx defaults (recommended)
-    # Custom: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384"
+    ciphers: ""  # Leave empty for defaults (NGINX annotation only, HAProxy uses ConfigMap)
 
   # Performance & Reliability
   proxy:
-    bodySize: "8m"
+    bodySize: "8m"  # NGINX only
     connectTimeout: 60
     sendTimeout: 60
     readTimeout: 60
-    bufferSize: "4k"
+    bufferSize: "4k"  # NGINX only
     buffersNumber: 4
-    nextUpstream: "error timeout"
-    nextUpstreamTries: 3
+    nextUpstream: "error timeout"  # NGINX only
+    nextUpstreamTries: 3  # NGINX only
 
   # Rate Limiting
   rateLimit:
@@ -146,7 +138,7 @@ ingress:
   websocket:
     enabled: false
 
-  # Canary Deployment (only enable when needed)
+  # Canary Deployment (NGINX only)
   canary:
     enabled: false
     weight: 0
@@ -172,7 +164,7 @@ ingress:
 
 ingressGRPC:
   enabled: false
-  className: nginx
+  className: haproxy
 
   # GRPC-specific settings
   grpc:
@@ -220,7 +212,7 @@ ingressGRPC:
     burst: 200
     key: "$binary_remote_addr"
 
-  # Canary Deployment
+  # Canary Deployment (NGINX only)
   canary:
     enabled: false
     weight: 0
@@ -347,8 +339,17 @@ resources:
     cpu: 250m
     memory: 250Mi
 
+# DaemonSet update strategy
+updateStrategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxUnavailable: 1
+minReadySeconds: 0
+
 networkPolicy:
   enabled: false
+  defaultDeny: false
+  allowDNS: true
   policyTypes:
     - Ingress
     - Egress
@@ -383,6 +384,67 @@ configmap:
       content: |-
         key3: value3
         key4: value4
+
+# Scheduling
+topologySpreadConstraints: []
+terminationGracePeriodSeconds: 30
+dnsPolicy: ""
+dnsConfig: {}
+hostAliases: []
+priorityClassName: ""
+runtimeClassName: ""
+shareProcessNamespace: false
+
+# Extra extensibility
+extraVolumes: []
+extraVolumeMounts: []
+extraContainers: []
+extraEnvFrom: []
+extraInitContainers: []
+
+# Lifecycle hooks
+lifecycle: {}
+  # preStop:
+  #   exec:
+  #     command: ["/bin/sh", "-c", "sleep 10"]
+  # postStart:
+  #   exec:
+  #     command: ["/bin/sh", "-c", "echo started"]
+
+# Labels & Annotations
+podLabels: {}
+commonLabels: {}
+commonAnnotations: {}
+component: ""
+partOf: ""
+
+# Monitoring
+metrics:
+  serviceMonitor:
+    enabled: false
+    additionalLabels: {}
+    namespace: ""
+    endpoints:
+      - port: http
+        path: /metrics
+        interval: 30s
+        scrapeTimeout: 10s
+  podMonitor:
+    enabled: false
+    additionalLabels: {}
+    namespace: ""
+    podMetricsEndpoints:
+      - port: http
+        path: /metrics
+        interval: 30s
+
+# Vertical Pod Autoscaler
+verticalPodAutoscaler:
+  enabled: false
+  updatePolicy:
+    updateMode: "Auto"
+  resourcePolicy:
+    containerPolicies: []
 
 nodeSelector: {}
 
