--- a/charts/statefulset/templates/ingress-grpc.yaml
+++ b/charts/statefulset/templates/ingress-grpc.yaml
@@ -1,131 +1,1 @@
-{{- if .Values.ingressGRPC.enabled -}}
-{{- $fullName := include "statefulset.fullname" . -}}
-{{- $svcPort := index .Values.service.ports 0 -}}
-{{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1
-{{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
-kind: Ingress
-metadata:
-  name: {{ $fullName }}-grpc
-  labels:
-    {{- include "statefulset.labels" . | nindent 4 }}
-    {{- with .Values.ingressGRPC.extraLabels }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
-  annotations:
-    # GRPC Backend Protocol
-    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
-    {{- if .Values.ingressGRPC.ssl.redirect }}
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    {{- end }}
-    {{- if .Values.ingressGRPC.ssl.protocols }}
-    nginx.ingress.kubernetes.io/ssl-protocols: {{ .Values.ingressGRPC.ssl.protocols | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.ssl.ciphers }}
-    nginx.ingress.kubernetes.io/ssl-ciphers: {{ .Values.ingressGRPC.ssl.ciphers | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.securityHeaders.enabled }}
-    {{- if .Values.ingressGRPC.securityHeaders.hsts }}
-    nginx.ingress.kubernetes.io/hsts: "true"
-    nginx.ingress.kubernetes.io/hsts-max-age: {{ .Values.ingressGRPC.securityHeaders.hstsMaxAge | quote }}
-    nginx.ingress.kubernetes.io/hsts-include-subdomains: {{ .Values.ingressGRPC.securityHeaders.hstsIncludeSubdomains | quote }}
-    {{- if .Values.ingressGRPC.securityHeaders.hstsPreload }}
-    nginx.ingress.kubernetes.io/hsts-preload: "true"
-    {{- end }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.securityHeaders.frameOptions }}
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      more_set_headers "X-Frame-Options: {{ .Values.ingressGRPC.securityHeaders.frameOptions }}";
-      {{- if .Values.ingressGRPC.securityHeaders.contentTypeNosniff }}
-      more_set_headers "X-Content-Type-Options: nosniff";
-      {{- end }}
-      {{- if .Values.ingressGRPC.securityHeaders.xssProtection }}
-      more_set_headers "X-XSS-Protection: {{ .Values.ingressGRPC.securityHeaders.xssProtection }}";
-      {{- end }}
-      {{- if .Values.ingressGRPC.securityHeaders.referrerPolicy }}
-      more_set_headers "Referrer-Policy: {{ .Values.ingressGRPC.securityHeaders.referrerPolicy }}";
-      {{- end }}
-      {{- if .Values.ingressGRPC.securityHeaders.csp }}
-      more_set_headers "Content-Security-Policy: {{ .Values.ingressGRPC.securityHeaders.csp }}";
-      {{- end }}
-      # GRPC specific settings
-      grpc_read_timeout {{ .Values.ingressGRPC.grpc.timeout }}s;
-      grpc_send_timeout {{ .Values.ingressGRPC.grpc.timeout }}s;
-      {{- if .Values.ingressGRPC.grpc.maxMessageSize }}
-      client_max_body_size {{ .Values.ingressGRPC.grpc.maxMessageSize }};
-      {{- end }}
-    {{- end }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.proxy.bodySize }}
-    nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.ingressGRPC.proxy.bodySize | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.proxy.connectTimeout }}
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: {{ .Values.ingressGRPC.proxy.connectTimeout | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.proxy.sendTimeout }}
-    nginx.ingress.kubernetes.io/proxy-send-timeout: {{ .Values.ingressGRPC.proxy.sendTimeout | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.proxy.readTimeout }}
-    nginx.ingress.kubernetes.io/proxy-read-timeout: {{ .Values.ingressGRPC.proxy.readTimeout | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.proxy.bufferSize }}
-    nginx.ingress.kubernetes.io/proxy-buffer-size: {{ .Values.ingressGRPC.proxy.bufferSize | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.proxy.nextUpstream }}
-    nginx.ingress.kubernetes.io/proxy-next-upstream: {{ .Values.ingressGRPC.proxy.nextUpstream | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.proxy.nextUpstreamTries }}
-    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: {{ .Values.ingressGRPC.proxy.nextUpstreamTries | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.rateLimit.enabled }}
-    nginx.ingress.kubernetes.io/limit-rps: {{ .Values.ingressGRPC.rateLimit.rps | quote }}
-    nginx.ingress.kubernetes.io/limit-burst-multiplier: {{ div .Values.ingressGRPC.rateLimit.burst .Values.ingressGRPC.rateLimit.rps | quote }}
-    {{- end }}
-    {{- if .Values.ingressGRPC.canary.enabled }}
-    nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-weight: {{ .Values.ingressGRPC.canary.weight | quote }}
-    {{- end }}
-    {{- with .Values.ingressGRPC.extraAnnotations }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
-spec:
-  {{- if and .Values.ingressGRPC.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.ingressGRPC.className }}
-  {{- end }}
-  {{- if .Values.ingressGRPC.tls }}
-  tls:
-    {{- range .Values.ingressGRPC.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
-  rules:
-    {{- range .Values.ingressGRPC.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
-            pathType: {{ .pathType }}
-            {{- end }}
-            backend:
-              {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
-              service:
-                name: {{ $fullName }}
-                port:
-                  number: {{ $svcPort.port }}
-              {{- else }}
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort.port | quote }}
-              {{- end }}
-          {{- end }}
-    {{- end }}
-{{- end }}
+{{- include "common.ingress.grpc" . -}}
