--- a/charts/statefulset/templates/ingress-http.yaml
+++ b/charts/statefulset/templates/ingress-http.yaml
@@ -1,136 +1,1 @@
-{{- if .Values.ingress.enabled -}}
-{{- $fullName := include "statefulset.fullname" . -}}
-{{- $svcPort := index .Values.service.ports 0 -}}
-{{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1
-{{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
-kind: Ingress
-metadata:
-  name: {{ $fullName }}
-  labels:
-    {{- include "statefulset.labels" . | nindent 4 }}
-    {{- with .Values.ingress.extraLabels }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
-  annotations:
-    {{- if .Values.ingress.ssl.redirect }}
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    {{- end }}
-    {{- if .Values.ingress.ssl.protocols }}
-    nginx.ingress.kubernetes.io/ssl-protocols: {{ .Values.ingress.ssl.protocols | quote }}
-    {{- end }}
-    {{- if .Values.ingress.ssl.ciphers }}
-    nginx.ingress.kubernetes.io/ssl-ciphers: {{ .Values.ingress.ssl.ciphers | quote }}
-    {{- end }}
-    {{- if .Values.ingress.securityHeaders.enabled }}
-    {{- if .Values.ingress.securityHeaders.hsts }}
-    nginx.ingress.kubernetes.io/hsts: "true"
-    nginx.ingress.kubernetes.io/hsts-max-age: {{ .Values.ingress.securityHeaders.hstsMaxAge | quote }}
-    nginx.ingress.kubernetes.io/hsts-include-subdomains: {{ .Values.ingress.securityHeaders.hstsIncludeSubdomains | quote }}
-    {{- if .Values.ingress.securityHeaders.hstsPreload }}
-    nginx.ingress.kubernetes.io/hsts-preload: "true"
-    {{- end }}
-    {{- end }}
-    {{- if .Values.ingress.securityHeaders.frameOptions }}
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      more_set_headers "X-Frame-Options: {{ .Values.ingress.securityHeaders.frameOptions }}";
-      {{- if .Values.ingress.securityHeaders.contentTypeNosniff }}
-      more_set_headers "X-Content-Type-Options: nosniff";
-      {{- end }}
-      {{- if .Values.ingress.securityHeaders.xssProtection }}
-      more_set_headers "X-XSS-Protection: {{ .Values.ingress.securityHeaders.xssProtection }}";
-      {{- end }}
-      {{- if .Values.ingress.securityHeaders.referrerPolicy }}
-      more_set_headers "Referrer-Policy: {{ .Values.ingress.securityHeaders.referrerPolicy }}";
-      {{- end }}
-      {{- if .Values.ingress.securityHeaders.csp }}
-      more_set_headers "Content-Security-Policy: {{ .Values.ingress.securityHeaders.csp }}";
-      {{- end }}
-    {{- end }}
-    {{- end }}
-    {{- if .Values.ingress.proxy.bodySize }}
-    nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.ingress.proxy.bodySize | quote }}
-    {{- end }}
-    {{- if .Values.ingress.proxy.connectTimeout }}
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: {{ .Values.ingress.proxy.connectTimeout | quote }}
-    {{- end }}
-    {{- if .Values.ingress.proxy.sendTimeout }}
-    nginx.ingress.kubernetes.io/proxy-send-timeout: {{ .Values.ingress.proxy.sendTimeout | quote }}
-    {{- end }}
-    {{- if .Values.ingress.proxy.readTimeout }}
-    nginx.ingress.kubernetes.io/proxy-read-timeout: {{ .Values.ingress.proxy.readTimeout | quote }}
-    {{- end }}
-    {{- if .Values.ingress.proxy.bufferSize }}
-    nginx.ingress.kubernetes.io/proxy-buffer-size: {{ .Values.ingress.proxy.bufferSize | quote }}
-    {{- end }}
-    {{- if .Values.ingress.proxy.nextUpstream }}
-    nginx.ingress.kubernetes.io/proxy-next-upstream: {{ .Values.ingress.proxy.nextUpstream | quote }}
-    {{- end }}
-    {{- if .Values.ingress.proxy.nextUpstreamTries }}
-    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: {{ .Values.ingress.proxy.nextUpstreamTries | quote }}
-    {{- end }}
-    {{- if .Values.ingress.rateLimit.enabled }}
-    nginx.ingress.kubernetes.io/limit-rps: {{ .Values.ingress.rateLimit.rps | quote }}
-    nginx.ingress.kubernetes.io/limit-burst-multiplier: {{ div .Values.ingress.rateLimit.burst .Values.ingress.rateLimit.rps | quote }}
-    {{- end }}
-    {{- if .Values.ingress.cors.enabled }}
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: {{ .Values.ingress.cors.allowOrigin | quote }}
-    nginx.ingress.kubernetes.io/cors-allow-methods: {{ .Values.ingress.cors.allowMethods | quote }}
-    nginx.ingress.kubernetes.io/cors-allow-headers: {{ .Values.ingress.cors.allowHeaders | quote }}
-    nginx.ingress.kubernetes.io/cors-allow-credentials: {{ .Values.ingress.cors.allowCredentials | quote }}
-    nginx.ingress.kubernetes.io/cors-max-age: {{ .Values.ingress.cors.maxAge | quote }}
-    {{- end }}
-    {{- if .Values.ingress.websocket.enabled }}
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    nginx.ingress.kubernetes.io/websocket-services: {{ $fullName }}
-    {{- end }}
-    {{- if .Values.ingress.canary.enabled }}
-    nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-weight: {{ .Values.ingress.canary.weight | quote }}
-    {{- end }}
-    {{- with .Values.ingress.extraAnnotations }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
-spec:
-  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.ingress.className }}
-  {{- end }}
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
-  rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
-            pathType: {{ .pathType }}
-            {{- end }}
-            backend:
-              {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
-              service:
-                name: {{ $fullName }}
-                port:
-                  number: {{ $svcPort.port }}
-              {{- else }}
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort.port | quote }}
-              {{- end }}
-          {{- end }}
-    {{- end }}
-{{- end }}
+{{- include "common.ingress.http" . -}}
