--- a/charts/statefulset/templates/service.yaml
+++ b/charts/statefulset/templates/service.yaml
@@ -1,20 +1,1 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ include "statefulset.fullname" . }}
-  labels:
-    {{- include "statefulset.labels" . | nindent 4 }}
-spec:
-  type: {{ .Values.service.type }}
-  {{- if and (eq .Values.service.type "LoadBalancer") .Values.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
-  {{- end }}
-  ports:
-    {{- range .Values.service.ports }}
-    - port: {{ .port }}
-      protocol: {{ .protocol }}
-      targetPort: {{ .targetPort }}
-      name: {{ .name }}
-    {{- end }}
-  selector:
-    {{- include "statefulset.selectorLabels" . | nindent 4 }}
+{{- include "common.service" . -}}
